# MyGoogleAlertPapers

./: .env.example  .gitignore  Makefile  README.md  environment.yml  pyproject.toml
.learnings/: ERRORS.md  LEARNINGS.md
docs/: 00-project-charter.md  01-architecture-overview.md  02-data-model.md  03-validation-protocol.md  04-dedup-and-versioning.md  05-enrichment-strategy.md  06-cost-accounting.md  07-current-project-state-and-library-closure-2026-05-07.md  07-implementation-roadmap.md  08-documentation-map-and-archive-guide-2026-05-07.md  08-open-questions.md  09-dev-notes.md  10-implementation-blueprint.md  11-enrichment-reliability-plan.md  11-packageB-decision-memo-2026-04-16.md  12-package-1-resumability-spec.md  12-packageB-phase-summary-and-archive-guide-2026-04-16.md  13-package-2-cache-hardening-spec.md  13-project-phase-map-and-current-status-2026-04-22.md  14-package-3-correctness-plan.md  15-current-progress-review-and-next-step-plan-2026-04-29.md  15-development-progress-report-2026-04-09.md  15-three-day-execution-plan-2026-04-26.md  16-day2-day3-hardening-and-title-reuse-promotion-2026-04-27.md  16-duplicate-provider-query-elimination-plan-2026-04-29.md  16-package3-implementation-options.md  16-validation-infrastructure-blueprint-2026-04-12.md  17-phase1-library-prelink-implementation-and-ablation-2026-04-29.md  19-her-branch-analysis-and-integration-report-2026-04-15.md  20-next-step-code-and-experiment-plan-after-post-openalex-promotion-2026-04-30.md  21-packageA-implementation-and-replay-results-2026-04-15.md  33-packageB-decision-memo-2026-04-16.md  (+15 more)
(+513 files in other folders)
