[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mygooglealertpapers"
version = "0.1.0"
description = "Local-first Google Scholar alert email ingestion and paper normalization pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12",
  "python-dotenv>=1.0",
]

[project.scripts]
mgap = "mygooglealertpapers.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
